// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormFooter/> should render children positions 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 2`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  >
    My-Children-Component
  </div>
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 3`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
  My-Children-Component
</div>
`;

exports[`<FormFooter/> should render children positions 4`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  My-Children-Component
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 5`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  >
    My-Children-Component
  </div>
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should render children positions 6`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  My-Children-Component
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "cancelIsReset" option 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "canceling" state 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "deleting" state 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "ready" state 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Save
  </button>
</div>
`;

exports[`<FormFooter/> should validate "ready" state when isUpdate 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    type="submit"
  >
    Update
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when cancelIsReset is false 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when cancelIsReset is true 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Saving
  </button>
</div>
`;

exports[`<FormFooter/> should validate "saving" state when isUpdate 1`] = `
<div
  class="formFooter"
  data-lens-element="form-footer"
  data-testid="testing-target"
>
  <div
    class="formFooterDeleteContainer"
  />
  <button
    class="button button--intent-success button--size-normal button--appearance-default button--intent-success--appearance-default formFooterButton"
    data-lens-appearance="default"
    data-lens-button-size="normal"
    data-lens-element="button"
    data-lens-element-button-parent="form-footer__save"
    data-lens-intent="success"
    disabled=""
    type="submit"
  >
    Updating
  </button>
</div>
`;
